LegendDemo: get working

--- a/src/lib/legend/legend-demo.html
+++ b/src/lib/legend/legend-demo.html
@@ -1,5 +1,8 @@
+<body>
+<script src="http://d3js.org/d3.v3.js"></script>
 <script src="d3.legend.js"></script>
 <script>
+  console.log('START')
   var margin = {top: 20, right: 80, bottom: 30, left: 50},
   width = 960 - margin.left - margin.right,
   height = 500 - margin.top - margin.bottom;
@@ -27,6 +30,8 @@
   .x(function(d) { return x(d.date); })
   .y(function(d) { return y(d.temperature); });
 
+  console.log('BODY', d3.select('body'))
+
   var svg = d3.select("body").append("svg")
   .attr("width", width + margin.left + margin.right)
   .attr("height", height + margin.top + margin.bottom)
@@ -34,6 +39,8 @@
   .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
   d3.tsv("data.tsv", function(error, data) {
+    console.log('DATA', data)
+    console.log('SVG', svg)
     color.domain(d3.keys(data[0]).filter(function(key) { return key !== "date"; }));
 
     data.forEach(function(d) {
@@ -105,3 +112,30 @@
 
   });
 </script>
+<style>
+  body {
+    font: 10px sans-serif;
+  }
+
+  .axis path,
+  .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+  }
+
+  .x.axis path {
+    display: none;
+  }
+
+  .line {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+  }
+
+  .legend rect {
+    fill:white;
+    stroke:black;
+    opacity:0.8;}
+</style>
